# Dense-CPP

./: .gitignore  CMakeLists.txt  COPYRIGHT.md  Makefile  README.md
src/: Dense.cpp  Dense.hpp
